# meta-koders-dna-

./: Dockerfile  README.md  README_HF.md  inference.py  main.py  openenv.yaml  pyproject.toml  requirements.txt  server.py
server/: app.py
src/: bundled_sequences.py  crispr_engine.py  env.py  models  ncbi_fetcher.py  tasks.py
tests/: tests_env.py
